<resources>
    <string name="app_name">Scorekeeper</string>
    <string name="versionNumber">1.0.1</string>

    <string name="replayText">Replay</string>
    <string name="mainMenuText">To Main Menu</string>
    <string name="winnerText">Winner</string>
    <string name="teamOneTitle">Team One</string>
    <string name="teamTwoTitle">Team Two</string>

    <string name="defaultScore">Score: 0</string>

    <string name="beanBagToss">Bean Bag Toss</string>
    <string name="bocceBall">Bocce Ball</string>
    <string name="washers">Washers</string>
    <string name="ladderGolf">Ladder Golf</string>
    <string name="horseshoeGame">Horseshoes</string>

    <string name="minusOne">-1</string>
    <string name="plusOne">+1</string>
    <string name="plusTwo">+2</string>
    <string name="plusThree">+3</string>
    <string name="plusFour">+4</string>
    <string name="title_activity_lkj">lkj</string>
    <string name="title_activity_info_screen">info_screen</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
