<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/winner_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.webs.au3io.scorekeeper.WinnerScreen"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@color/backgroundColor"
        android:id="@+id/linearLayout">

        <TextView
            android:text="@string/winnerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textColor="@color/textColor"
            android:textSize="38sp"
            android:textAlignment="center"
            android:layout_marginBottom="20dp" />

        <TextView
            android:text="@string/teamOneTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/winningTeamName"
            android:textSize="38sp"
            android:textColor="@color/textColor"
            android:textAlignment="center"
            android:layout_marginBottom="20dp" />

        <Button
            android:text="@string/replayText"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:id="@+id/replayBtn"
            android:textSize="18sp"
            android:onClick="onClick" />

        <Button
            android:text="@string/mainMenuText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainMenuBtn"
            android:textSize="18sp"
            android:onClick="onClick" />
    </LinearLayout>

</RelativeLayout>
