<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.webs.au3io.scorekeeper.HomeScreen"
    android:orientation="vertical"
    android:background="@color/backgroundColor">

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/beanBagBtn"
        android:textColor="@color/textColor"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textSize="32sp"
        android:layout_weight="1"
        android:text="@string/beanBagToss"
        android:textAlignment="textStart"
        android:gravity="center_vertical|start"
        android:onClick="onClick" />

    <View
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray"
        android:layout_height="1dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/bocceBallBtn"
        android:textColor="@color/textColor"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textSize="32sp"
        android:layout_weight="1"
        android:text="@string/bocceBall"
        android:textAlignment="textStart"
        android:gravity="center_vertical|start"
        android:onClick="onClick" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/washersBtn"
        android:textColor="@color/textColor"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textSize="32sp"
        android:layout_weight="1"
        android:textAlignment="textStart"
        android:gravity="center_vertical|start"
        android:onClick="onClick"
        android:text="@string/washers" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/ladderGolfBtn"
        android:textColor="@color/textColor"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textSize="32sp"
        android:layout_weight="1"
        android:text="@string/ladderGolf"
        android:textAlignment="textStart"
        android:gravity="center_vertical|start"
        android:onClick="onClick" />

    <View
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray"
        android:layout_height="1dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/horseshoeBtn"
        android:textColor="@color/textColor"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textSize="32sp"
        android:layout_weight="1"
        android:text="@string/horseshoeGame"
        android:textAlignment="textStart"
        android:gravity="center_vertical|start"
        android:onClick="onClick" />

</LinearLayout>
